@@ -58,7 +58,7 @@
     </distributionManagement>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <pmd.analysisCacheLocation>${project.build.directory}/pmd/pmd.cache</pmd.analysisCacheLocation>
@@ -460,7 +460,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surefire.version}</version>
                     <configuration>
-                        <argLine>-ea -Xms8192m -Xmx8192m -XX:+UseG1GC -verbose:gc -XX:+HeapDumpOnOutOfMemoryError -XX:StartFlightRecording:filename=recording.jfr,dumponexit=true,settings=default.jfc</argLine>
+                        <argLine>-ea -Xms8192m -Xmx8192m -XX:+UseG1GC -verbose:gc -XX:+HeapDumpOnOutOfMemoryError -XX:StartFlightRecording:filename=recording.jfr,dumponexit=true,settings=default.jfc -Djava.security.manager=allow</argLine>
                         <parallel>all</parallel>
                         <perCoreThreadCount>true</perCoreThreadCount>
                         <useUnlimitedThreads>true</useUnlimitedThreads>
@@ -960,7 +960,7 @@
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>12.3.1</version>
+                        <version>13.4.0</version>
                         <scope>compile</scope>
                     </dependency>
                 </dependencies>
@@ -1283,7 +1283,7 @@
             <plugin>
                 <groupId>com.trivago.rta</groupId>
                 <artifactId>cluecumber-maven</artifactId>
-                <version>3.14.0</version>
+                <version>3.14.1</version>
                 <configuration>
                     <sourceJsonReportDirectory>${project.build.directory}/cucumber</sourceJsonReportDirectory>
                     <generatedHtmlReportDirectory>${project.build.directory}/site/cluecumber</generatedHtmlReportDirectory>
@@ -1564,7 +1564,7 @@
                                     <linuxshortcut>true</linuxshortcut>
                                     <type>DEB</type>
                                     <toolhome>${project.build.directory}/jpackage/unix</toolhome>
-                                    <runtimeimage>/usr/lib/jvm/java-17-openjdk-17.0.9.0.9-3.fc39.x86_64</runtimeimage>
+                                    <runtimeimage>/usr/lib/jvm/java-21</runtimeimage>
                                 </configuration>
                             </execution>
                             <execution>
@@ -1577,7 +1577,7 @@
                                     <linuxshortcut>true</linuxshortcut>
                                     <type>RPM</type>
                                     <toolhome>${project.build.directory}/jpackage/unix</toolhome>
-                                    <runtimeimage>/usr/lib/jvm/java-17-openjdk-17.0.9.0.9-3.fc39.x86_64</runtimeimage>
+                                    <runtimeimage>/usr/lib/jvm/java-21</runtimeimage>
                                 </configuration>
                             </execution>
                         </executions>
